# lenovo-server-service-1

./: .gitignore  docker-compose.dev.yml  docker-compose.yml  main.py  ml-service hyperstack.py
.github/workflows/: deploy.yml
docs/: logging.md  realtime.md
fastapi-service/: Dockerfile  pyproject.toml
infra/: ubuntu_server_setup.sh
ml-service/: .dockerignore  Dockerfile  README.md  hyperstack.py  main.py  pyproject.toml  realtime.py
ml-service/gpu/provision/: a4000_build.sh  a4000_downloadandrun.sh  availability.sh  deletepod.sh  examples.md  gpu.py  managing.sh  notes.md  provision.sh  provision2.sh  ssh_test.py
ml-service/gpu/provision/hyperstack/: check_ws.py  deleteall.py  flavors.sh  provision1.sh
nextjs-app/: .gitignore  Dockerfile  Dockerfile.dev  package-lock.json  package.json  pnpm-lock.yaml  tsconfig.tsbuildinfo
nextjs-app/docs/: hey.md
nextjs-app/public/: sw.js
nextjs-app/src/: auth.ts  middleware.ts
nextjs-app/src/app/: layout.tsx  manifest.ts  page.tsx
nextjs-app/src/app/actions/: auth.ts
nextjs-app/src/app/api/assistant/: route.ts
nextjs-app/src/app/api/dump/: route.ts
nextjs-app/src/app/api/snapshot/: route.ts
nextjs-app/src/app/api/transcribe/: route.ts
nextjs-app/src/app/dashboard/: layout.tsx  page.tsx
nextjs-app/src/app/types/: chatCompletions.ts  db.ts  next-auth.d.ts
nextjs-app/src/app/ui/: AssistantResponse.tsx  AuthBox.tsx  Camera.tsx  DumpList.tsx  DumpListItem.tsx  Dumper.tsx  DumperBox.tsx  InstallPrompt.tsx  RealtimeTranscribe.tsx  RecordVoiceMessage.tsx  app-sidebar.tsx
(+4 files in other folders)
