[project]
name = "ml-service"
version = "0.1.0"
description = "endpoints for ml and other python-based functionality"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.116.1",
    "msgpack>=1.1.1",
    "pillow>=11.3.0",
    "protobuf>=6.32.0",
    "python-multipart>=0.0.20",
    "sentencepiece>=0.2.1",
    "torch>=2.8.0",
    "transformers[torch]",
    "uvicorn>=0.35.0",
    "websockets>=15.0.1",
]
